--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,10 +1,9 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f8ff;
-    text-align: center;
+display: flex;
+align-items: center;
 }
 
 h1 {
-    color: red;
-    font-size: 5px;
+    color: rgb(111, 255, 0);
+    font-size: 100px;
 }
