--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,9 +1,36 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+
+
 body {
-display: flex;
-align-items: center;
+background-color: #B9B7B7;
+height: 100vh;
+}
+
+
+nav{
+
+    width: 100%;
+    height: 100px;
+    background-color: black;
+    
 }
 
 h1 {
-    color: rgb(111, 255, 0);
+    color: rgb(255, 149, 0);
     font-size: 100px;
 }
+
+main{
+    margin-top: 20px;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
