--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -12,12 +12,29 @@ height: 100vh;
 }
 
 
-nav{
-
+.search-container {
+    position: relative;
+    width: 40%;
+    margin-top:1%;
+    margin-left: 30%;
+}
+.search-input {
     width: 100%;
-    height: 100px;
-    background-color: black;
-    
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    outline: none;
+
+}
+.search-button {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    border: none;
+    background: none;
+    cursor: pointer;
+    font-size: 16px;
 }
 
 h1 {
@@ -32,5 +49,12 @@ main{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.mapa-mundi path {
+    fill: #000000;
+    stroke: #fff;
+    stroke-width: 1;
+    cursor: pointer;    
 }
 
