--- a/src/main/resources/templates/hola-mundo.html
+++ b/src/main/resources/templates/hola-mundo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Hola Mundo</title>
+    <title> Mundo</title>
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
